// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`prompt templates > demandToPromptContext with full supplement 1`] = `
{
  "description": "实现用户登录功能",
  "displayId": "42",
  "supplementText": "## 补充信息

### 补充需求说明
支持微信和 QQ 登录

### 验收标准
通过率 100%

### 变更范围
auth 模块

### 约束条件
不能修改数据库 schema

### 参考链接
https://wiki.example.com/login-spec

### 其他补充
注意兼容老版本",
  "title": "添加用户登录",
}
`;

exports[`prompt templates > demandToPromptContext without supplement 1`] = `
{
  "description": "页面崩溃",
  "displayId": "99",
  "supplementText": "",
  "title": "修复 Bug",
}
`;

exports[`prompt templates > getKnowledgeForPrompt returns deterministic map 1`] = `
{
  "buildCommand": "npm run build",
  "codeStyleDescription": "2空格缩进、120字符行宽、命名规范等",
  "dependencyCheckPath": "node_modules/.bin/eslint",
  "e2eDir": "frontend/e2e/dynamic",
  "e2eTool": "Playwright",
  "frontendDir": ".",
  "installCommand": "npm install",
  "installFallbackCommand": "npm install",
  "knownIssuesSection": "- 无已知预存问题",
  "lintCommand": "npm run lint",
  "testCommand": "npm test",
  "testFilesCommand": "npm test -- {files}",
}
`;

exports[`prompt templates > issueProgressComment - completed 1`] = `
"✅ **自动处理进度更新**

阶段: **verify** — 已完成"
`;

exports[`prompt templates > issueProgressComment - failed with detail 1`] = `
"💻 **自动处理进度更新**

阶段: **implement** — 失败

AI 超时: 30分钟限制已到"
`;

exports[`prompt templates > issueProgressComment - in progress 1`] = `
"🔍 **自动处理进度更新**

阶段: **analysis** — 进行中"
`;

exports[`prompt templates > planModeVerifyPrompt 1`] = `
"验证 Issue #42：实现用户登录功能
需要添加用户名密码登录，支持 OAuth2.0 第三方登录
依次执行 npm run lint、npm run build、npm test，按实际命令结果判断。Verify 只执行代码质量和单元测试，不运行 Playwright 或其他浏览器验收命令；浏览器验收由后续 UAT 阶段负责。
不要修改源码、配置、测试或计划，不要提交或推送，不要写文件。临时文件用完后清理。最终只返回一个严格 JSON 对象，不要返回 Markdown 代码块或 JSON 之外的文字。JSON 必须符合以下结构：{"schemaVersion":"iaf-mini/verify/v1","phase":"verify","checks":{"lint":{"status":"passed|failed","command":"实际命令","exitCode":0,"summary":"结果摘要","diagnostics":["失败诊断"]},"build":{"status":"passed|failed","command":"实际命令","exitCode":0,"summary":"结果摘要","diagnostics":["失败诊断"]},"test":{"status":"passed|failed","command":"实际命令","exitCode":0,"summary":"结果摘要","diagnostics":["失败诊断"]}},"summary":"总体摘要","reportMarkdown":"面向用户的完整 Markdown 验证报告"}。diagnostics 没有内容时返回空数组；exitCode 无法取得时返回 null；没有实际执行或无法确定时对应检查必须为 failed，不得猜测通过。任务完成由服务端校验结构化字段，不依赖 Markdown 或计划勾选标记。
项目检查说明：- 无已知预存问题"
`;

exports[`prompt templates > planPrompt with supplement 1`] = `
"你是资深技术负责人。请一次性完成需求分析和方案设计。

## Issue 信息
- IID: #42
- 标题: 实现用户登录功能
- 描述:
需要添加用户名密码登录，支持 OAuth2.0 第三方登录

## 补充信息

### 补充需求说明
需要支持微信登录

## 输出要求
请先阅读项目根目录的 AGENTS.md 了解项目架构，再进行分析和设计。

请制定一份完整的实施计划，内容包括：

### 第一部分：需求分析
1. **需求概述** — 用简洁的语言总结需求目标
2. **功能点拆解** — 列出需要实现的具体功能点
3. **影响范围分析** — 哪些模块/文件可能受到影响
4. **非功能需求** — 性能、安全、兼容性等方面的考量
5. **风险和依赖** — 潜在风险和外部依赖

### 第二部分：系统设计
1. **方案概述** — 整体设计思路
2. **涉及的文件和模块** — 需要新建/修改的文件列表
3. **数据模型变更** — 数据库或模型层的变更
4. **接口设计** — API 接口定义
5. **详细实施步骤** — 按顺序列出实施步骤

### 第三部分：内部任务图
将上述分析和设计写入 description。每个任务使用 id、title、instructions、acceptanceCriteria、dependsOn 字段；明确任务产物和验收标准，只引用已定义的任务 ID。
完整计划使用 title、description、acceptanceCriteria、tasks 字段，最终只返回严格 JSON，不输出 Markdown 文档。
不要修改任何文件；结构化计划由服务端持久化并生成只读展示。
所有内部任务共同完成一个父 Issue；任务只包含业务代码、文档、配置、测试等有效仓库变化。
任务依赖使用 dependsOn，不能成环；所有任务完成后统一 verify、UAT 和 PR 交付。
审核、Git 提交/推送和 PR 创建由工作台执行，不列为子任务。最终输出严格 JSON。"
`;

exports[`prompt templates > planPrompt without supplement 1`] = `
"你是资深技术负责人。请一次性完成需求分析和方案设计。

## Issue 信息
- IID: #99
- 标题: 修复首页加载缓慢问题
- 描述:
首页加载超过 5 秒，需要优化

## 输出要求
请先阅读项目根目录的 AGENTS.md 了解项目架构，再进行分析和设计。

请制定一份完整的实施计划，内容包括：

### 第一部分：需求分析
1. **需求概述** — 用简洁的语言总结需求目标
2. **功能点拆解** — 列出需要实现的具体功能点
3. **影响范围分析** — 哪些模块/文件可能受到影响
4. **非功能需求** — 性能、安全、兼容性等方面的考量
5. **风险和依赖** — 潜在风险和外部依赖

### 第二部分：系统设计
1. **方案概述** — 整体设计思路
2. **涉及的文件和模块** — 需要新建/修改的文件列表
3. **数据模型变更** — 数据库或模型层的变更
4. **接口设计** — API 接口定义
5. **详细实施步骤** — 按顺序列出实施步骤

### 第三部分：内部任务图
将上述分析和设计写入 description。每个任务使用 id、title、instructions、acceptanceCriteria、dependsOn 字段；明确任务产物和验收标准，只引用已定义的任务 ID。
完整计划使用 title、description、acceptanceCriteria、tasks 字段，最终只返回严格 JSON，不输出 Markdown 文档。
不要修改任何文件；结构化计划由服务端持久化并生成只读展示。
所有内部任务共同完成一个父 Issue；任务只包含业务代码、文档、配置、测试等有效仓库变化。
任务依赖使用 dependsOn，不能成环；所有任务完成后统一 verify、UAT 和 PR 交付。
审核、Git 提交/推送和 PR 创建由工作台执行，不列为子任务。最终输出严格 JSON。"
`;

exports[`prompt templates > rePlanPrompt with latest planSnapshot （只读计划） 1`] = `
"你是资深技术负责人。之前的实施计划未通过审核，请根据审核反馈修改计划。

## Issue 信息
- IID: #42
- 标题: 实现用户登录功能
- 描述:
需要添加用户名密码登录，支持 OAuth2.0 第三方登录

## 补充信息

### 补充需求说明
需要支持微信登录

## 审核反馈历史（共 2 轮）
### 第 1 轮 (2024-06-01T10:00:00Z)
第一轮:加索引

### 第 2 轮 (2024-06-01T11:00:00Z)
第二轮:加权限校验

## 上一轮被驳回的完整实施计划

<rejected-plan>
# V2 方案

这是被驳回的最新版,应进 prompt
</rejected-plan>

请先阅读:
- AGENTS.md (项目架构)

上文已直接给出上一轮被驳回的方案全文，请基于该方案对照反馈做修改。

## 输出要求
请基于上一轮被驳回的实施计划做实质性修改：
- 针对每条审核反馈给出可验证的调整（说明改了什么、为什么、影响范围）
- 不要原样照搬被驳回方案，也不要只做措辞润色
- 避免空洞口号（如"提升健壮性"），代之以具体的设计/接口/步骤/验收标准

请输出修改后的完整新版结构化计划，使用规定的 JSON 字段。
重点关注最新一轮的反馈，同时确保之前轮次提出的问题也已得到解决。
不要修改任何文件；结构化计划由服务端持久化并生成只读展示。
所有内部任务共同完成一个父 Issue；任务只包含业务代码、文档、配置、测试等有效仓库变化。
任务依赖使用 dependsOn，不能成环；所有任务完成后统一 verify、UAT 和 PR 交付。
审核、Git 提交/推送和 PR 创建由工作台执行，不列为子任务。最终输出严格 JSON。"
`;

exports[`prompt templates > rePlanPrompt with no planSnapshot （无计划快照） 1`] = `
"你是资深技术负责人。之前的实施计划未通过审核，请根据审核反馈修改计划。

## Issue 信息
- IID: #42
- 标题: 实现用户登录功能
- 描述:
需要添加用户名密码登录，支持 OAuth2.0 第三方登录

## 补充信息

### 补充需求说明
需要支持微信登录

## 审核反馈历史（共 1 轮）
### 第 1 轮 (2024-06-01T10:00:00Z)
需要补错误处理

请先阅读:
- AGENTS.md (项目架构)

参考之前的审核反馈历史来改进计划。

## 输出要求
请基于上一轮被驳回的实施计划做实质性修改：
- 针对每条审核反馈给出可验证的调整（说明改了什么、为什么、影响范围）
- 不要原样照搬被驳回方案，也不要只做措辞润色
- 避免空洞口号（如"提升健壮性"），代之以具体的设计/接口/步骤/验收标准

请输出修改后的完整新版结构化计划，使用规定的 JSON 字段。
重点关注最新一轮的反馈，同时确保之前轮次提出的问题也已得到解决。
不要修改任何文件；结构化计划由服务端持久化并生成只读展示。
所有内部任务共同完成一个父 Issue；任务只包含业务代码、文档、配置、测试等有效仓库变化。
任务依赖使用 dependsOn，不能成环；所有任务完成后统一 verify、UAT 和 PR 交付。
审核、Git 提交/推送和 PR 创建由工作台执行，不列为子任务。最终输出严格 JSON。"
`;

exports[`prompt templates > rePlanPrompt with review history 1`] = `
"你是资深技术负责人。之前的实施计划未通过审核，请根据审核反馈修改计划。

## Issue 信息
- IID: #42
- 标题: 实现用户登录功能
- 描述:
需要添加用户名密码登录，支持 OAuth2.0 第三方登录

## 补充信息

### 补充需求说明
需要支持微信登录

## 审核反馈历史（共 2 轮）
### 第 1 轮 (2024-06-01T10:00:00Z)
数据库设计需要增加索引

### 第 2 轮 (2024-06-01T11:00:00Z)
API 接口缺少权限校验

请先阅读:
- AGENTS.md (项目架构)

参考之前的审核反馈历史来改进计划。

## 输出要求
请基于上一轮被驳回的实施计划做实质性修改：
- 针对每条审核反馈给出可验证的调整（说明改了什么、为什么、影响范围）
- 不要原样照搬被驳回方案，也不要只做措辞润色
- 避免空洞口号（如"提升健壮性"），代之以具体的设计/接口/步骤/验收标准

请输出修改后的完整新版结构化计划，使用规定的 JSON 字段。
重点关注最新一轮的反馈，同时确保之前轮次提出的问题也已得到解决。
不要修改任何文件；结构化计划由服务端持久化并生成只读展示。
所有内部任务共同完成一个父 Issue；任务只包含业务代码、文档、配置、测试等有效仓库变化。
任务依赖使用 dependsOn，不能成环；所有任务完成后统一 verify、UAT 和 PR 交付。
审核、Git 提交/推送和 PR 创建由工作台执行，不列为子任务。最终输出严格 JSON。"
`;
